# indigo

./: .gitignore  .gitmodules  Indigo.sln  Makefile.am  README.md  bootstrap.sh  configure.ac  indigo.conf  indigo.vcxproj  indigo.vcxproj.filters  msvcconf.xml
Indigo/: Indigo.sln
core/: Common.h  Font.cpp  Font.h  Image.cpp  Image.h  Main.cpp  Pipe.cpp  Pipe.h  Render.cpp  Resource.h  ShaderPool.cpp  StaticResources.cpp  Thread.cpp  Thread.h  Window.cpp  Window.h  ZipResource.cpp  ZipResource.h
game/: App.cpp  App.h  Database.c  Game.cpp  Main.cpp  QuitDlg.cpp  QuitDlg.h  StartDlg.cpp  StartDlg.h  WindowChangeDlg.cpp  WindowChangeDlg.h  indigo.vcxproj  indigo.vcxproj.filters
include/indigo/: Font.h  Image.h  ImageLayer.h  Layer.h  Parser.h  Pipe.h  Quad.h  Render.h  Resource.h  ShaderPool.h  Thread.h  Window.h  ZipResource.h
include/indigo/sg/: SGCamera.h  SGMeshLoader.h  SGNode.h  SGPrimitive.h
include/indigo/ui/: UIButton.h  UIDialog.h  UIImage.h  UILabel.h  UILayer.h  UILoader.h  UINinePatch.h  UIPanel.h  UISizer.h  UIWidget.h
lib/: BufferObject.cpp  BufferObject.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  OOGL.h  OOGL.vcxproj  OOGL.vcxproj.filters  Render.cpp  Render.h  Resource.h  Shader.cpp  Shader.h  State.cpp  State.h  StateFns.cpp  StateFns.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h  notes.txt
m4/: ltrc.inc
old/: App.cpp  Font.cpp  Font.h  GUIGridSizer.cpp  GUIGridSizer.h  GUILabel.cpp  GUILabel.h  GUILayer.cpp  GUILayer.h  GUIPanel.cpp  GUIPanel.h  GUISizer.cpp  GUISizer.h  GUIStyle.cpp  GUIStyle.h  GUIWidget.cpp  GUIWidget.h  Image.cpp  Image.h  LuaAllocator.cpp  LuaAllocator.h  LuaResource.cpp  LuaResource.h  Splash.cpp  init.lua
oogl/: BufferObject.cpp  BufferObject.h  Framebuffer.cpp  Framebuffer.h  Makefile.am  OOGL.h  OOGL.vcxproj  Shader.cpp  Shader.h  State.cpp  State.h  StateFns.cpp  StateFns.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  Window.cpp  Window.h  configure.ac
oogl/include/OOGL/: BufferObject.h  Framebuffer.h  OOGL.h  Shader.h  State.h  StateFns.h  Texture.h  VertexArrayObject.h  Window.h
oogl/src/: BufferObject.cpp  Framebuffer.cpp  Shader.cpp  State.cpp  StateFns.cpp  Texture.cpp  VertexArrayObject.cpp  Window.cpp
resources/: 3d_colour.vert  Bilbo.fnt  BilboSwashCaps.fnt  Blokletters.fnt  DejaVu_Sans.fnt  DejaVu_Sans_0.tga  DejaVu_Sans_1.tga  Font_8bit.frag  NinePatch.frag  NinePatch.vert  StaticResources.cpp  Titillium-Regular.fnt  Titillium-Regular.fnt.txt  beta-tpose.fbx  beta-tpose.iqe  beta.mtl  colour.frag  colour_blend.frag  indigo.rc  main.lua  resource.h  ui.txt
resources/ui/tat/: 03.eps
samples/: pandemic.squirrel  sample.ferret
src/: App.cpp  App.h  Camera.cpp  Camera.h  Common.h  Config.h.in  DrawThread.cpp  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GUIGridSizer.cpp  GUIGridSizer.h  GUILabel.cpp  GUILabel.h  GUILayer.cpp  GUILayer.h  GUIMenu.cpp  GUIMenu.h  GUIPanel.cpp  GUIPanel.h  GUISizer.cpp  GUISizer.h  GUIStyle.cpp  GUIStyle.h  GUIWidget.cpp  GUIWidget.h  Game.cpp  Game.h  Image.cpp  Image.h  ImageLayer.cpp  Layer.cpp  Layer.h  LogicObject.h  LogicThread.cpp  LuaAllocator.cpp  LuaResource.cpp  Main.cpp  MainWindow.cpp  (+53 more)
src/sg/: SGCamera.cpp  SGMeshLoader.cpp  SGNode.cpp  SGPrimitive.cpp
src/ui/: ImageLayer.cpp  ImageLayer.h  Quad.cpp  UIButton.cpp  UIDialog.cpp  UIDialog.h  UIImage.cpp  UIImage.h  UILabel.cpp  UILabel.h  UILayer.cpp  UILayer.h  UILoader.cpp  UILoader.h  UINinePatch.cpp  UINinePatch.h  UIPanel.cpp  UISizer.cpp  UISizer.h  UIWidget.cpp  UIWidget.h
tools/: bin2c.c
ui/: ImageLayer.cpp  ImageLayer.h  Label.cpp  Label.h  NinePatch.cpp  NinePatch.h  Quad.cpp  Quad.h  Sizer.h  UI9Patch.cpp  UI9Patch.h  UIButton.cpp  UIButton.h  UIDialog.cpp  UIDialog.h  UIImage.cpp  UIImage.h  UILabel.cpp  UILabel.h  UILayer.cpp  UILayer.h  UILoader.cpp  UILoader.h  UINinePatch.cpp  UINinePatch.h  UIPanel.cpp  UIPanel.h  UISizer.cpp  UISizer.h  UIText.cpp  UIText.h  UIWidget.cpp  UIWidget.h
